<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_grey_24dp"
            android:title="@string/menu_update_profile" />
        <item
            android:id="@+id/nav_notification_list"
            android:icon="@drawable/ic_notifications_none_blue_24dp"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistic"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_grey_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_ready_draft"
            android:icon="@drawable/ic_assignment_turned_in_grey_24dp"
            android:title="@string/menu_ready_close" />
        <item
            android:id="@+id/nav_mail_notif"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/menu_mail_noitf" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range_grey_24dp"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_error_grey_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_grey"
            android:title="@string/menu_logout" />
    </group>
</menu>