<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_width="match_parent">
    <ProgressBar
        android:id="@+id/pb_close_draft"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_centerInParent="true"/>
    <ScrollView
        android:id="@+id/sv_close_draft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            tools:context=".CloseDraftActivity">
            <TextView
                android:id="@+id/tv_closing_draft_title"
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
            <Spinner
                android:id="@+id/results_choices_spinner"
                android:layout_width="match_parent"
                android:layout_margin="8sp"
                android:layout_marginBottom="10sp"
                android:layout_height="match_parent"/>

            <TextView
                android:textSize="12sp"
                android:textStyle="italic"
                android:textAlignment="textEnd"
                android:text="@string/closing_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_draft_final_title"
                android:layout_margin="8sp"
                android:hint="@string/final_title"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/supervisor"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <TextView
                android:layout_margin="8sp"
                android:layout_marginTop="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:hint="@string/first_supervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
            <Spinner
                android:layout_margin="8sp"
                android:id="@+id/first_supervisor_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="8sp"
                android:layout_marginTop="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:hint="@string/second_supervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
            <Spinner
                android:layout_margin="8sp"
                android:id="@+id/second_supervisor_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/examiner"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <TextView
                android:layout_margin="8sp"
                android:layout_marginTop="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:hint="@string/first_examiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
            <Spinner
                android:layout_margin="8sp"
                android:id="@+id/first_examiner_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="8sp"
                android:layout_marginTop="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:hint="@string/second_examiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>
            <Spinner
                android:layout_margin="8sp"
                android:id="@+id/second_examiner_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/expertise_required"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <Spinner
                android:layout_margin="8sp"
                android:id="@+id/expertise_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_margin="8sp"
                android:id="@+id/et_draft_notes"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:hint="@string/additional_notes"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_submit_result"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="16sp"
                android:text="@string/submit_draft_closing"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
