<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15sp"
        android:background="@color/transparent_grey"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_identity_number"
            android:layout_gravity="center"
            android:layout_width="260sp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/identity_number_hint"
            android:layout_marginBottom="4sp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_gravity="center"
            android:layout_width="260sp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginBottom="4sp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/login_button_text" />
    </LinearLayout>
</LinearLayout>