<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProfileActivity">
        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_centerHorizontal="true"
            android:layout_width="110sp"
            android:layout_marginTop="20sp"
            android:layout_height="110sp" />
        <ImageButton
            android:id="@+id/ib_upload"
            android:layout_width="60sp"
            android:layout_centerHorizontal="true"
            android:layout_height="60sp"
            android:onClick="uploadImage"
            android:src="@drawable/ic_folder_open_white_24dp"
            android:layout_below="@id/iv_profile_pic"/>
        <EditText
            android:id="@+id/et_profile_email"
            android:layout_marginTop="10sp"
            android:hint="@string/profile_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_margin="10sp"
            android:layout_marginBottom="0sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_upload"/>
        <EditText
            android:id="@+id/et_profile_name"
            android:layout_marginTop="10sp"
            android:textSize="15sp"
            android:hint="@string/profile_name_hint"
            android:layout_width="match_parent"
            android:layout_margin="10sp"
            android:inputType="text"
            android:layout_marginBottom="0sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_profile_email"/>
        <LinearLayout
            android:id="@+id/ll_change_password"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bordered_round_small"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="20sp"
            android:layout_below="@id/et_profile_name">
            <EditText
                android:id="@+id/et_new_password"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                android:layout_margin="10sp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:hint="@string/new_password_hint"
                android:layout_width="match_parent"
                android:layout_margin="10sp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_old_password"
                android:layout_marginTop="10sp"
                android:hint="@string/old_password_hint"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_margin="10sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/bt_submit_profile"
            android:text="SUBMIT"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="50sp"
            android:layout_below="@id/ll_change_password"/>
    </RelativeLayout>
</ScrollView>